# morphology-workflows

./: .auto-changelog  .auto-changelog-template.hbs  .codespellrc  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: codeql.yml  publish-sdist.yml  run-tox.yml
doc/: Makefile
doc/source/: api_ref.rst  conf.py  index.rst
docs/: .gitignore  environment.yml
docs/source/: .gitignore  api_ref.rst  cli.rst  conf.py  fetch_config.rst  index.rst  luigi_cfg.rst  placeholders_config.rst
examples/: builder_recipe.xml  dataset.csv  get_dataset.py  logging.conf  luigi.cfg  neuromorpho_config.json  run.sh  run_curation.sh  transform_dataset.csv
examples/clone/: luigi.cfg  run_clone.sh
examples/clone/morphologies/: neurite_wrong_root_point.swc
examples/clone/out_repaired/: repaired_dataset.csv
examples/clone/out_repaired/CollectAnnotated/data/: C060114A5.asc  C270106A.asc  astrocyte.h5  circle_contour.asc  complexe.swc  disconnected_neurite.swc  iterators.asc  mono-type.asc  multiple_point_section.asc  neurite_wrong_root_point.swc  nrn-order-already-sorted.h5  nrn_ordering.swc  pia.asc  reversed_NRN_neurite_order.swc  rp100427-123_idC.asc  simple.asc  simple2.asc  spine.asc  three_point_soma.swc
examples/clone/repair_release/: C060114A5.asc  C270106A.asc  astrocyte.h5  complexe.swc  disconnected_neurite.swc  iterators.asc  mono-type.asc  multiple_point_section.asc  nested_single_children.asc  neurondb.xml  nrn-order-already-sorted.h5  nrn_ordering.swc  pia.asc  reversed_NRN_neurite_order.swc  rp100427-123_idC.asc  simple-with-image-coord.asc  simple2.asc  spine.asc
examples/morphologies/: C060114A5.asc  DS3_030701.CNG.swc  DS3_100101_wL.CNG.swc  IF1_030400.CNG.swc  IF1_190301.CNG.swc  IF1_210301.CNG.swc  IF1_300300.CNG.swc  IF2_080501.CNG.swc  IF3_040400.CNG.swc  IF3_150300.CNG.swc  IF3_221199.CNG.swc  IF3_261199.CNG.swc  IF4_140201.CNG.swc  README  rp100427-123_idC.asc
examples/transform/: luigi.cfg  mouse_dataset.csv  run_transform.sh
examples/transform/morphologies/: nested_single_children.asc
examples/transform/mouse_morphologies/: ak171117_A_idA.asc  ak171120_A_idA.asc
src/morphology_workflows/: __init__.py  annotation.py  clone.py  curation.py  generate_exemplars.py  marker_helper.py  placeholders.py  repair.py  transform.py  utils.py
src/morphology_workflows/_data/: default_placeholders.csv
src/morphology_workflows/_templates/: allen_config.json  luigi.cfg  placeholder_config_schema.json
src/morphology_workflows/_templates/config_templates/: example_template_curate_dataset.cfg
src/morphology_workflows/_templates/source_report/: conf.py
src/morphology_workflows/tasks/: __init__.py  annotation.py  cli.py  clone.py  curation.py  fetch.py  fetch_morphologies.py  generate_exemplars.py  nexus_aware.py  placeholders.py  repair.py  transform.py  utils.py  workflows.py
tests/: __init__.py  conftest.py  test_cli.py  test_curation.py  test_download_morphs.py  test_example_1.py  test_example_1_clone.py  test_placeholders.py  test_transform.py
tests/data/: allen_config_download.json  mouselight_config_download.json  neuromorpho_config_download.json  placeholders.csv
tests/data/test_example_1/out_annotated/: annotated_dataset.csv
tests/data/test_example_1/out_annotated/Annotate/: report.csv
tests/data/test_example_1/out_annotated/ApicalPoint/: report.csv
tests/data/test_example_1/out_annotated/CollectCurated/: report.csv
tests/data/test_example_1/out_annotated/CutLeaves/: report.csv
tests/data/test_example_1/out_annotated/HardLimit/: report.csv
tests/data/test_example_1/out_annotated/MType/: report.csv
tests/data/test_example_1/out_annotated/PlotApicalPoint/: report.csv
tests/data/test_example_1/out_annotated/PlotCutLeaves/: report.csv
tests/data/test_example_1/out_annotated/PlotHardLimit/: report.csv
tests/data/test_example_1/out_curated/: curated_dataset.csv
tests/data/test_example_1/out_curated/Align/: report.csv
tests/data/test_example_1/out_curated/CheckNeurites/: report.csv
tests/data/test_example_1/out_curated/Collect/: report.csv
tests/data/test_example_1/out_curated/Curate/: report.csv
tests/data/test_example_1/out_curated/DetectErrors/: report.csv
tests/data/test_example_1/out_curated/EnsureNeuritesOutsideSoma/: report.csv
tests/data/test_example_1/out_curated/ExtractMarkers/: report.csv
tests/data/test_example_1/out_curated/Orient/: report.csv
tests/data/test_example_1/out_curated/PlotErrors/: report.csv
tests/data/test_example_1/out_curated/PlotMarkers/: report.csv
tests/data/test_example_1/out_curated/PlotMorphologies/: report.csv
tests/data/test_example_1/out_curated/Recenter/: report.csv
tests/data/test_example_1/out_curated/Sanitize/: report.csv
tests/data/test_example_1/out_repaired/: repaired_dataset.csv
tests/data/test_example_1/out_repaired/CollectAnnotated/: report.csv
tests/data/test_example_1/out_repaired/FixZeroDiameters/: report.csv
tests/data/test_example_1/out_repaired/MakeCollage/: report.csv
tests/data/test_example_1/out_repaired/MakeRelease/: report.csv
tests/data/test_example_1/out_repaired/PlotRepair/: report.csv
tests/data/test_example_1/out_repaired/Repair/: report.csv
tests/data/test_example_1/out_repaired/RepairNeurites/: report.csv
tests/data/test_example_1/repair_release-h5/: neurondb.xml
tests/data/test_example_1_clone/out_clone/: clone_dataset.csv
tests/data/test_transform/out_transformed/: transformed_dataset.csv
tests/examples_test/: dataset.csv  get_dataset.py  luigi.cfg  placement_rules.xml  run_curation.sh  transform_rules.xml
tests/examples_test/morphologies/: C270106A.asc  README  iterators.asc  mono-type.asc  multiple_point_section.asc  nested_single_children.asc  sections-block.asc  simple-with-font.asc  simple-with-image-coord.asc  simple.asc  simple2.asc  spine.asc
(+123 files in other folders)
